# essential-cpp

./: CMakeLists.txt
configs/: cp4cc_log.properties  log4cpp.properties
source/chapter1/chap1/: ch1.cpp
source/chapter2/ch2solutions/: ch2main.cpp
source/chapter2/chap2/: c2_main.cpp
source/chapter3/ch3solutions/: ch3main.cpp
source/chapter3/chap3/: ch3_main.cpp
source/chapter4/ch4solutions/: ch4main.cpp
source/chapter4/polymorphic/: main.cpp
source/chapter6/binarytree/: btree.cpp
source/chapter6/ch6solutions/: ch6main.cpp
source/chapter6/chap6/: ch6_main.cpp
source/log4cpp/: log_example.cpp  log_example.h  log_prop_example.cpp  log_prop_example.h  log_test.cpp  log_test.h
